[gd_scene load_steps=12 format=3 uid="uid://clmcn81kskcu4"]

[ext_resource type="Script" path="res://scenes/start_room/zombie.gd" id="1_ob1b0"]
[ext_resource type="Texture2D" uid="uid://b0ytjt0coo7hm" path="res://assets/sprites/zombie/skeleton_spritesheet.png" id="5_2p0f8"]
[ext_resource type="Script" path="res://components/hurtbox.gd" id="44_7nt7d"]
[ext_resource type="Script" path="res://components/health_manager.gd" id="45_i60hj"]
[ext_resource type="PackedScene" uid="uid://ca5l5o5gsh3vg" path="res://components/healthbar.tscn" id="46_noj23"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3l6mn"]
radius = 1162.21

[sub_resource type="Animation" id="Animation_5me1g"]
resource_name = "attack"
length = 1.80002
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0)]
}

[sub_resource type="Animation" id="Animation_altef"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_gueq8"]
resource_name = "walk"
length = 3.40002
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1), Vector2i(9, 1), Vector2i(10, 1), Vector2i(11, 1), Vector2i(12, 1), Vector2i(13, 1), Vector2i(14, 1), Vector2i(15, 1), Vector2i(16, 1)]
}

[sub_resource type="Animation" id="Animation_i37xs"]
resource_name = "idle"
length = 3.40002
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2), Vector2i(12, 2), Vector2i(13, 2), Vector2i(14, 2), Vector2i(15, 2), Vector2i(16, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_poxxa"]
_data = {
"RESET": SubResource("Animation_altef"),
"attack": SubResource("Animation_5me1g"),
"idle": SubResource("Animation_i37xs"),
"walk": SubResource("Animation_gueq8")
}

[node name="zombie" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_ob1b0")

[node name="detection_area" type="Area2D" parent="."]
scale = Vector2(0.5, 0.5)
collision_layer = 0
collision_mask = 2

[node name="detection" type="CollisionShape2D" parent="detection_area"]
position = Vector2(28, 26)
shape = SubResource("CircleShape2D_3l6mn")

[node name="zombie_hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="zombie_hitbox"]
polygon = PackedVector2Array(-11, -45, -11, -45, 13, -50, 29, -44, 50, -36, 60, -21, 63, 17, 49, 64, 6, 64, -17, 57, -30, 43)

[node name="collision_with_en" type="CollisionPolygon2D" parent="."]
position = Vector2(6, 7)
polygon = PackedVector2Array(25, -10, 24, -25, 30, -19, 39, -15, 46, -18, 49, -23, 46, -29, 42, -35, 34, -52, 17, -54, 3, -55, -29, -44, -43, -32, -51, -17, -61, 4, -41, 30, -32, 45, -2, 59, 31, 49, 49, 29, 54, 21, 48, 11, 41, 10, 30, 14, 29, 21, 18, 21, 13, 24, 10, 22, 13, 19, 11, 12, 18, 9, 19, 1, 18, -8)

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("entity", "health_manager")]
collision_layer = 4
collision_mask = 0
script = ExtResource("44_7nt7d")
entity = NodePath("..")
health_manager = NodePath("../HealthManager")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
position = Vector2(-1, 3)
polygon = PackedVector2Array(-52, 12, -52, 12, -43, 17, -34, 28, -25, 43, -12, 52, 19, 53, 33, 47, 32, 38, 23, 32, 8, 34, 0, 36, -7, 26, -2, 24, 14, 18, 15, -4, 22, -10, 46, -6, 55, -23, 39, -37, 4, -47, -6, -43, -19, -37, -36, -24, -45, -12, -44, -6, -54, 2)

[node name="HealthManager" type="Node2D" parent="." node_paths=PackedStringArray("healthbar")]
script = ExtResource("45_i60hj")
healthbar = NodePath("Healthbar")

[node name="Healthbar" parent="HealthManager" instance=ExtResource("46_noj23")]
offset_left = 5.0
offset_top = -76.0
offset_right = 5.0
offset_bottom = -76.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_2p0f8")
hframes = 17
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_poxxa")
}

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="zombie_hitbox" to="." method="_on_zombie_hitbox_body_entered"]
[connection signal="received_damage" from="Hurtbox" to="." method="_on_hurtbox_received_damage"]
[connection signal="died" from="HealthManager" to="." method="_on_health_manager_died"]
